tests/errors/move_literal.ptt
spark {
  a is now 42
}
